css/tstats.css
.ts-main-container {
	width: 100%;
	max-width: 1600px;
	margin: 0 auto;
}
#ts-side select {
	width: 100%;
	margin: .5em auto .5em auto;
}

#ts-content {
	display: grid;
	grid-template-columns: 1fr 2fr;
}
#ts-oldstats {
	min-height: 3em;
	margin: 0 auto;
	text-align: center;
}
#ts-side {
	height: 35em;
}
#ts-center {
	display: grid;
	grid-template-rows: auto 1fr;
	min-height: 1200px;
}
#ts-side h3 {
	text-align: center;
	background: var(--menu_background);
	margin-bottom: 0;
}
#ts-center h2 {
	text-align: center;
}
#ts-powergraph {
	margin-top: var(--default_margin_padding);
}
#ts-powergraph-graph {
	height: 300px;
}
#ts-powergraph-graph svg, #ts-powergraph {
	background: var(--menu_background);
}
#ts-powergraph-graph .ct-bar {
	stroke-width: 25px;
}
#ts-powergraph-x {
	padding: var(--default_margin_padding);
	background: var(--menu_background);
	font-size: 80%;
	margin-bottom: calc(var(--default_margin_padding) * 3);
}
#ts-maingraph svg {
	min-height: 1200px;
	margin-left: -1em;
}
.ct-label, .ct-axis {
	color: var(--foreground);
	font-size: 12px !important;
}
.ct-start {
	font-size: 12px;
}
.ct-grid {
	stroke: var(--faded);
}
.ct-series-a .ct-bar {
	stroke: var(--blue);
}
.ct-label.ct-horizontal {
	margin-left: -.3em;
}


@media(max-width: 799px) {
	#ts-content {
		grid-template-columns: 1fr;
	}
	#ts-maingraph .ct-bar {
		stroke-width: 10px;
	}
}

